--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Shame</title>
-    <script src="lib/react.js"></script>
-    <script src="lib/JSXTransformer.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+  
   </head>
   <body>
     <div id="container"></div>
-    <script type="text/jsx" src="script.js"></script>
+    <div class="graph"></div>
+    <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
+    <script src="d3.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
