--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title>Shame</title>
-  
+
   </head>
   <body>
     <div id="container"></div>
     <div class="graph"></div>
     <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
     <script src="d3.js"></script>
+    <script src="cache.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
