--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <title>Shame</title>
-
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="container"></div>
