colors and stuff

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
         margin: 0;
         padding: 0;
       }
+
+    .axis path,
+    .axis line {
+      fill: none;
+      stroke: rgba(255,255,255,0.7);
+      shape-rendering: crispEdges;
+    }
+
+    .axis text {
+      font-size: 12px;
+      fill: rgba(255,255,255,0.7);
+    }
+
+    .axis line {
+    }
+
+    body {
+      font-family: Helvetica;
+      background: #002B36;
+    }
     </style>
   </head>
   <body>
