--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shame</title>
+    <title>GH visualization thing</title>
     <style>
       * {
         margin: 0;
